# MadBot

./: .gitignore  README.md  bot.py  config.py  db.py  default.json  defaults.json  main.db  main.db-journal  main.py  pp.md  pyproject.toml  requirements.txt  tos.md
cogs/: admin.py  blacklist.py  config.py  custom.py  dicts.py  help.py  listeners.py  madlibs.py  menus.py  misc.py  prefix.py  speech.py  topgg.py  utils.py
cogs/json/: defaults.json  speech.json
database/: db.py  main.db
